--- a/css/book_appointment.css
+++ b/css/book_appointment.css
@@ -5,7 +5,7 @@
     --light-color:#fdfcfa;
     --box-shadow:.5rem .5rem 0 rgba(22,160,133,.2);
     --text-shadow:.4rem .4rem 0 rgba(0,0,0,.2);
-    --border:2rem solid  var(--blue);
+    --border:.2rem solid  var(--blue);
 
  }
  *{
@@ -35,4 +35,47 @@
 .row.image img{
      width : 100%
 }
+.btn{
+    display: block;
+    margin-top: 1rem;
+    padding: .5rem;
+    padding-left: 1rem;
+    border: var(--border);
+    border-radius: .5rem;
+    box-shadow: var(--box-shadow);
+    color: var(--blue);
+    cursor: pointer;
+    font-size: 1.7rem;
+    background: #fff;
+}
+.btn span{
+    padding: .7rem 1rem;
+    border-radius: .5rem;
+    background: var(--blue);
+    color: #fff;
+    margin-left: .5rem;
+}
+.btn:hover{
+     color:var(--blue);
+     background: #fff;
+     margin-left: 1rem;
+}
+.btn:hover span{
+    background:var(--blue);
+    color: #fff;
+}
+.row form{
+    flex: 1 1 45rem;
+    background: #fff;
+    border: var(--border);
+    box-shadow: var(--box-shadow);
+    text-align: center;
+    padding: 2rem;
+    border-radius: .5rem;
+}
+ .row form h3{
+    color: var(--black);
+    padding-bottom: 1rem;
+    font-size: 3rem;
+ }
  
