--- a/css/viewProfile.css
+++ b/css/viewProfile.css
@@ -14,9 +14,30 @@
 
 .form-container {
     position: absolute;
+    max-width: 320px;
+    width: 100%;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 101;
     background: #fff;
+    padding: 25px;
+    border-radius: 12px;
+    box-shadow: rgba(0, 0, 0, 0.1);
+}
+
+.form_close {
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    color: black;
+    font-size: 22px;
+    opacity: 0.7;
+    cursor: pointer;
+}
+
+.form-container h2 {
+    font-size: 22px;
+    color: black;
+    text-align: center;
 }
