--- a/css/viewProfile.css
+++ b/css/viewProfile.css
@@ -41,3 +41,19 @@
     color: black;
     text-align: center;
 }
+
+.profile-info {
+    margin-bottom: 20px;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+.profile-label {
+    font-weight: bold;
+    margin-bottom: 5px;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+.profile-value {
+    margin-bottom: 10px;
+    font-family: 'Courier New', Courier, monospace;
+}
