--- a/css/signup.css
+++ b/css/signup.css
@@ -1,10 +1,54 @@
 
-body{
-    background: rgb(240, 244, 187);
-       color: rgb(0, 0, 0);
-   }
-div{
-    border: 20%;
-    border-color: black;
-    border-radius: 20%;
-}
+        .card {
+            background-color: #fff;
+            border-radius: 6px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            max-width: 400px;
+            margin: 0 auto;
+            padding: 40px;
+        }
+        
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+            padding: 20px;
+        }
+        * {box-sizing: border-box}
+
+        /* Full-width input fields */
+        input[type=text], input[type=password], input[type=number] {
+            width: 100%;
+            padding: 15px;
+            margin: 5px 0 22px 0;
+            display: inline-block;
+            border: none;
+            background: #f1f1f1;
+        }
+
+        input[type=text]:focus, input[type=password]:focus, input[type=number]:focus {
+            background-color: #ddd;
+            outline: none;
+        }
+
+        label {
+            display: inline-block;
+            width: 150px;
+        }
+
+        h2 {
+            color: red;
+        }
+
+        button {
+            background-color: #04AA6D;
+            color: white;
+            padding: 14px 20px;
+            margin: 8px 0;
+            border: none;
+            cursor: pointer;
+            width: 100%;
+            opacity: 0.9;
+        }
+
+        button:hover {
+            opacity: 1;
+        }
