--- a/css/signup.css
+++ b/css/signup.css
@@ -10,9 +10,8 @@
         
         body {
             font-family: Arial, Helvetica, sans-serif;
-            padding: 20px;
+            background-color: #484da0;
         }
-        * {box-sizing: border-box}
 
         /* Full-width input fields */
         input[type=text], input[type=password], input[type=number] {
@@ -38,17 +37,29 @@
             color: red;
         }
 
-        button {
-            background-color: #04AA6D;
+        .btn {
+            background-color:#484da0;
             color: white;
-            padding: 14px 20px;
-            margin: 8px 0;
+            padding: 15px 25px;
+            margin: 9px 0;
             border: none;
-            cursor: pointer;
+            /* cursor: pointer; */
             width: 100%;
             opacity: 0.9;
         }
 
-        button:hover {
+        .btn:hover {
             opacity: 1;
+        }
+
+        .cancelbtn, .signupbtn {
+            float: left;
+            width: 50%;
+        }
+
+        /* Clear floats */
+        .clearfix::after {
+            content: "";
+            clear: both;
+            display: table;
         }
