--- a/css/book_appointment.css
+++ b/css/book_appointment.css
@@ -8,7 +8,7 @@
     --border:.2rem solid  var(--blue);
 
  }
- *{
+ /* *{
     font-family:'Poppins',sans-serif;
     margin: 0; padding: 0;
     box-sizing: border-box;
@@ -22,6 +22,10 @@
     overflow: hidden;
     scroll-padding-top: 7rem;
     scroll-behavior: smooth;
+  } */
+
+  body{
+    padding-top:50px;
   }
 .row{
     display: flex;
@@ -43,8 +47,8 @@
  }
  .home-img img{
     max-width: 100%;
-    width: 540px;
-    height: 500px;
+    width: 380px;
+    height: 400px;
   }
 /* .row.image{
     flex:1 1 45rem ;
@@ -55,32 +59,30 @@
      width : 10cm;
     height: 7cm;
 } */
-.btn{
+.btn1{
     display: block;
     margin-top: 1rem;
-    padding: .5rem;
-    padding-left: 1rem;
     border: var(--border);
     border-radius: .5rem;
     box-shadow: var(--box-shadow);
     color: var(--blue);
     cursor: pointer;
-    font-size: 1.7rem;
+    font-size: 1.4rem;
     background: #fff;
 }
-.btn span{
+.btn1 span{
     padding: .7rem 1rem;
     border-radius: .5rem;
     background: var(--blue);
     color: #fff;
-    margin-left: .5rem;
+
 }
-.btn:hover{
+.btn1:hover{
      color:var(--blue);
      background: #fff;
      margin-left: 1rem;
 }
-.btn:hover span{
+.btn1:hover span{
     background:var(--blue);
     color: #fff;
 }
@@ -90,7 +92,7 @@
     border: var(--border);
     box-shadow: var(--box-shadow);
     text-align: center;
-    padding: 2rem;
+    padding: 1rem;
     border-radius: .5rem;
     /* margin: 3rem; */
     width: 100%;
@@ -98,13 +100,13 @@
 }
  .row form h3{
     color: var(--black);
-    padding-bottom: 1rem;
-    font-size: 3rem;
+    padding-bottom: 0.5rem;
+    font-size: 1rem;
  }
  .row form .box{
-    width: 100%;
+    width: 87%;
    
-    margin: .7rem 0;
+    margin: .4rem 0;
     border-radius: .5rem;
     border: var(--border);
     font-size: 1.6rem;
@@ -112,8 +114,8 @@
     text-transform: none;
     padding: 1rem;
  }
- .row form .btn{
-    padding: 1rem 4rem;
+ .row form .btn1{
+    padding: 0.5rem 0.5rem;
  }
  /* @media(max-width:991px)
  {
