--- a/css/footer.css
+++ b/css/footer.css
@@ -10,7 +10,7 @@ footer {
     min-height: 250px;
     padding: 10px 1px;
     left:-2px;
-    background: #6469bf;
+    /* background-color: midnightblue; */
 }
 
 
