--- a/css/footer.css
+++ b/css/footer.css
@@ -6,11 +6,10 @@
 
 footer {
     position: relative;
-    min-width: 700px;
+    min-width: 100%;
     min-height: 250px;
     padding: 10px 1px;
-    left:-2px;
-    /* background-color: midnightblue; */
+    background-color:#484da0 ;
 }
 
 
