--- a/css/home.css
+++ b/css/home.css
@@ -4,10 +4,9 @@
         display: none;
     }
 }
-body{
-}
+
 .nav{
-    background-color:midnightblue;
+    background-color:#484da0;
     width: 100%;
     height: 120px;
     top: 0;
@@ -63,11 +62,11 @@ body{
     
   }
 .img{
-    width: 100%;
+    width: 98%;
     height: 635px;
 }
 .explorebutton{
-    background-color:midnightblue;
+    background-color:#484da0;
     border: none;
     color: white;
     padding: 15px 32px;
@@ -83,7 +82,7 @@ body{
 
 }
 .explorebutton:hover {
-    background-color:rgb(66, 129, 246);
+    background-color:#8b8ecb;
     }
 
 .container2{
@@ -106,7 +105,7 @@ body{
 .circle {
     width: 170px;
     height: 170px;
-    background-color: midnightblue;
+    background-color:#484da0;
     border-radius: 50%;
     display: inline-block;
     margin: auto;
@@ -140,7 +139,7 @@ body{
         .circlepic {
             width: 170px;
             height: 170px;
-            background-color: midnightblue;
+            background-color: #484da0;
             border-radius: 50%;
             display: inline-block;
             margin: auto;
@@ -205,11 +204,12 @@ body{
 
 
 .container3{
-    width: 100%;
+    width: 99%;
     height: 10px;
     margin-bottom: 20%;
 }
 .landscape{
+padding-left:5px;
 width: 100%;
 height: 400px;
 }
@@ -253,7 +253,7 @@ height: 400px;
     flex-direction: row;
 }
 .btn1-info{
-    background-color:midnightblue;
+    background-color:#484da0;
     border: none;
     color: white;
     padding: 15px 32px;
@@ -268,7 +268,7 @@ height: 400px;
     width: 200px;
 }
 .btn1-info:hover {
-    background-color:rgb(66, 129, 246);
+    background-color:#8b8ecb;
     }
 
     .btn2-info{
@@ -292,7 +292,7 @@ height: 400px;
         }    
         .container5 {
             background-image: url('../images/background6.jpeg'); /* Replace with your image URL */
-            background-size: cover;
+            background-size: 60%;
             padding: 20px;
             color: #fff;
             text-align: center;
@@ -308,7 +308,7 @@ height: 400px;
             align-items: center;
             position: relative;
             top: 50%;
-            left: 50%;
+            left: 40%;
             transform: translate(-50%, -50%);
             padding: 20px;
             background: rgba(0, 0, 0, 0.5);
@@ -352,7 +352,7 @@ height: 400px;
 
         }
         .footer {
-            background-color: midnightblue;
+            background-color:#484da0;
             color: #fff;
             padding: 20px;
             text-align: center;
