--- a/css/signup.css
+++ b/css/signup.css
@@ -10,7 +10,7 @@
         
         body {
             font-family: Arial, Helvetica, sans-serif;
-            background-color: #484da0;
+            background-color: #e7e7e7;
         }
 
         /* Full-width input fields */
@@ -38,7 +38,6 @@
         }
 
         .btn {
-            background-color:#484da0;
             color: white;
             padding: 15px 25px;
             margin: 9px 0;
