--- a/css/announcements.css
+++ b/css/announcements.css
@@ -27,3 +27,7 @@ h1 {
     font-weight: bold;
     margin-bottom: 5px;
 }
+.announcement-card .content {
+    font-weight: bold;
+    margin-top: 5px;
+}
