--- a/css/announcements.css
+++ b/css/announcements.css
@@ -9,7 +9,7 @@ h1 {
     color: #333;
 }
 .announcement-card {
-    background-color: #1e3d59;
+    background-color: #00316e;;
     color: #fff;
     padding: 20px;
     margin-bottom: 20px;
