--- a/css/admin_view.css
+++ b/css/admin_view.css
@@ -14,6 +14,17 @@ body {
     align-items: center;
 }
 
+button {
+    width: 250px; 
+    height: 45px; 
+    font-size: 25px;
+    /* border-radius: 10%; */
+}
+
+button:hover {
+    color: #0422a5;
+}
+
 main.table {
     width: 82vw;
     height: 90vh;
