--- a/css/announcements.css
+++ b/css/announcements.css
@@ -13,7 +13,7 @@ h1 {
 .announcement-card {
     background-color: #c0d7f0;
     background-image:url(/images/baby_blue_background.jpg) ;
-    color: #fff;
+    color: #00316e;
     padding: 20px;
     margin-bottom: 20px;
     border-radius: 10px;
