backgroud image for announcement-card

--- a/css/announcements.css
+++ b/css/announcements.css
@@ -12,7 +12,7 @@ h1 {
 }
 .announcement-card {
     background-color: #c0d7f0;
-    background-image:url(/images/baby_blue_background.jpg) ;
+    background-image:url('light-blue-background.jpg') ;
     color: #00316e;
     padding: 20px;
     margin-bottom: 20px;
