--- a/css/announcements.css
+++ b/css/announcements.css
@@ -8,7 +8,8 @@ h1 {
     text-align: center;
     margin-bottom: 5px;
     padding: 40px;
-    color: #333;
+    color:#0f4d99;
+    
 }
 .announcement-card {
     background-color: #c0d7f0;
