--- a/css/admin_view.css
+++ b/css/admin_view.css
@@ -18,7 +18,7 @@ button {
     width: 250px; 
     height: 45px; 
     font-size: 25px;
-    /* border-radius: 10%; */
+    border-radius: 50%;
 }
 
 button:hover {
@@ -193,16 +193,16 @@ thead th span.icon-arrow {
     transition: .2s ease-in-out;
 }
 
-thead th:hover span.icon-arrow{
-    border: 1.4px solid #6c00bd;
+thead th:hover {
+    border: 1.4px solid #0422a5;
 }
 
 thead th:hover {
-    color: #6c00bd;
+    color: #0422a5;
 }
 
 thead th.active span.icon-arrow{
-    background-color: #6c00bd;
+    background-color: #0422a5;
     color: #fff;
 }
 
@@ -211,7 +211,7 @@ thead th.asc span.icon-arrow{
 }
 
 thead th.active,tbody td.active {
-    color: #6c00bd;
+    color: #0422a5;
 }
 
 label{
