--- a/MVC/public/css/home.css
+++ b/MVC/public/css/home.css
@@ -1,61 +1,4 @@
-.card {
-    background-color: #fff;
-    border-radius: 6px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    max-width: 400px;
-    margin: 0 auto;
-    padding: 40px;
-}
-/* Full-width input fields */
-input[type=text], input[type=password], input[type=number] {
-    width: 93%;
-    padding: 15px;
-    margin: 5px 0 22px 0;
-    display: inline-block;
-    border: none;
-    background: #f1f1f1;
-}
-
-input[type=text]:focus, input[type=password]:focus, input[type=number]:focus {
-    background-color: #8184c7;
-    outline: none;
-}
-
-label {
-    display: inline-block;
-    width: 150px;
-}
-
-.btn {
-    color: white;
-    padding: 15px 25px;
-    margin: 9px 0;
-    border: none;
-    /* cursor: pointer; */
-    width: 100%;
-    background-color: #484da0;
-    opacity: 0.9;
-}
-
-.btn:hover {
-    opacity: 1;
-}
-
-.cancelbtn, .signupbtn {
-    float: left;
-    width: 50%;
-}
-
-/* Clear floats */
-.clearfix::after {
-    content: "";
-    clear: both;
-    display: table;
-}
-
-
-/* OLD CSS */
-        /* *{
+*{
     margin: 0px;
     ::-webkit-scrollbar {
         display: none;
@@ -212,7 +155,7 @@ label {
                 animation: pulse 1s infinite ease-out;
                 transition: all ease-out 0.5s;
 
-            } */
+            }
             
         /* Container Styles */
         /* .container2 {
@@ -260,7 +203,7 @@ label {
         } */
 
 
-/* .container3{
+.container3{
     width: 99%;
     height: 10px;
     margin-bottom: 20%;
@@ -348,7 +291,7 @@ height: 400px;
         background-color:lightgray;
         }    
         .container5 {
-            background-image: url('../images/background6.jpeg'); // Replace with your image URL 
+            background-image: url('../images/background6.jpeg'); /* Replace with your image URL */
             background-size: 60%;
             padding: 20px;
             color: #fff;
@@ -358,7 +301,7 @@ height: 400px;
             margin-bottom: 5%;
         }
 
-        // Review Styles 
+        /* Review Styles */
         .review {
             display: flex;
             justify-content: center;
@@ -378,7 +321,7 @@ height: 400px;
             width: 80px;
             height: 80px;
             border-radius: 50%;
-            background-image: url('doctor.png'); // Replace with the client's image URL 
+            background-image: url('doctor.png'); /* Replace with the client's image URL */
             background-size: cover;
             background-position: center;
             margin-right: 20px;
@@ -390,7 +333,7 @@ height: 400px;
             color: #fff;
         }
 
-        // Navigation Styles 
+        /* Navigation Styles */
         .nav-arrow {
             position: absolute;
             top: 50%;
@@ -408,4 +351,4 @@ height: 400px;
             font-size:xx-large;
 
         }
-       */
+      
