--- a/MVC/public/css/listedAppointments.css
+++ b/MVC/public/css/listedAppointments.css
@@ -1,6 +1,6 @@
 .appointment-list {
     list-style: none;
-    margin-left: 200px;
+    /* margin-left: 200px; */
     padding: 0; 
     margin:center; 
     max-height: 300px;
@@ -12,7 +12,7 @@
     align-self: center;
     align-content: center;
     align-items: center;
-    width: min-content;
+    /* width: min-content; */
    
 }
 
