--- a/MVC/public/css/listedAppointments.css
+++ b/MVC/public/css/listedAppointments.css
@@ -2,7 +2,7 @@
     list-style: none;
     /* margin-left: 200px; */
     padding: 0; 
-    margin:center; 
+    /* margin:center;  */
     max-height: 300px;
     overflow-y: auto;
     border: 1px solid #00316e;
@@ -21,7 +21,7 @@
     border-radius: 50px;
     padding: 10px;
     margin-bottom: 10px;
-    padding-left: 250px;
+    /* padding-left: 250px; */
 }
 
 /* Responsive Styles */
